--- a/02-Mod-String.ipynb
+++ b/02-Mod-String.ipynb
@@ -6,11 +6,13 @@
    "source": [
     "# Inextensible and perfectly flexible model\n",
     "\n",
+    "To define a material property that characterizes the ability of a tape to stick to a substrate, let's address the following problem.\n",
+    "\n",
     "Let un consider a tape of width $b$ and thickness $h$, which partially bonded to a substrate and loaded by a force \n",
     "$$\\underline F = F  (\\cos(\\theta)\\, \\underline e_1 + \\sin(\\theta)\\, \\underline e_2) $$\n",
     "at the free end. We set a reference frame ($O$,$\\underline e_1$, $\\underline e_2$) with $\\underline e_1$ paralell to the the substrate, $\\underline e_2$ orthogonal to the substrate, and  the origin $O$ at the interface between the bonded and debonded part. \n",
-    "A force \n",
     "\n",
+    "![Inextensible string model](./figures/string.png)\n",
     "\n",
     "Let be $L$ the length of tape. Let us assume the following hypothesis\n",
     "* The tape is bonded on the substrate for $s\\in(0,\\bar s)$\n",
