converting to markdown

--- a/02-Mod-String.ipynb
+++ b/02-Mod-String.ipynb
@@ -26,10 +26,10 @@
     "\n",
     "applied to the free end.\n",
     "\n",
-    "1. Show that the total energy of the system, sum of the potential energy of external force and the debonding energy is\n",
+    "1. Show that the total energy of the system, sum of the potential energy of external force and the debonding energy is (this will be filled durint the first class)\n",
     " \n",
     "\n",
-    "$$E(\\bar s, \\alpha) = $$\n",
+    "$$E(\\bar s, \\alpha) = \\ldots $$\n",
     "\n",
     "2. Using the energy minimality principle, find the orientation $\\alpha$ at the equilibrium and show that the system can be at equilibrium with $\\bar s \\in (0,L)$ only for a\n",
     "$$ F  = \\frac{G_c b}{1-\\cos \\theta} $$\n",
@@ -38,6 +38,13 @@
     "\n",
     "Resume your results in a one-page intermediate report,  possible written in `latex` (or a `jupyter-notebook`). The quality of the presentation and the graphs is important."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
