--- a/04-Exp-Stats.ipynb
+++ b/04-Exp-Stats.ipynb
@@ -16,8 +16,8 @@
     "3. We now turn to the comparison of the model prediction with the experimental data. We focus on the variations of the peeling force Fc with the peeling angle \\theta.\n",
     "\n",
     "    3.a. The model assuming extensibility of the adhesive predicts:\n",
-    "    $$\\dfrac{F}{G_c b} = \\frac{1-\\cos(\\theta)}{\\alpha \\left(\\sqrt{1 + 2 \\alpha/(1-\\cos(\\theta))^2} - 1\\right)}$$\n",
-    "where $$\\alpha = \\frac{b G_c}{h^2E}$$ is the number without dimension.\n",
+    "    $$\\dfrac{F}{G_c b} = \\frac{1-\\cos(\\theta)}{\\alpha}\\left(\\sqrt{1 + 2 \\alpha/(1-\\cos(\\theta))^2} - 1\\right)$$\n",
+    "where $$\\alpha = \\frac{G_c}{hE}$$ is the number without dimension.\n",
     "Demonstrate this expression by taking into account the effect of the extensibility on the variation of the elastic energy of the thin film during peeling and on the work of the external force.\n",
     "Then plot the theoretical prediction and compare it with the model assuming the inextensibility. Comment.\n",
     "\n",
